[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-format-converter-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for audio format conversion and validation"
requires-python = ">=3.10"
authors = [
    { name = "Audio Format Converter Team" }
]
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydub>=0.25.1",
    "pydantic>=2.0.0",
]

[project.scripts]
audio-format-converter-mcp = "audio_format_converter_mcp.server:main"

[tool.uv]
dev-dependencies = []